[package]
name = "ucore"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]

[features]
link_user_program = []
no_bbl = []
no_test = []
test_mutex_philosopher = []
test_monitor_philosopher = []


[profile.dev]
# MUST >= 1 : Enable RVO to avoid stack overflow
opt-level = 1

[profile.release]
debug = true

[dependencies]
log = "0.4"
spin = "0.4"
once = "0.3"
xmas-elf = "0.6"
bitflags = "1.0"
bit_field = "0.9"
volatile = "0.1"
linked_list_allocator = "0.6"
lazy_static = { version = "1.2", features = ["spin_no_std"] }
bit-allocator = { path = "../crate/bit-allocator" }
ucore-memory = { path = "../crate/memory" }
ucore-process = { path = "../crate/process" }
simple-filesystem = { git = "https://github.com/wangrunji0408/SimpleFileSystem-Rust", branch = "multi-thread" }


[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { git = "https://github.com/riscv-and-rust-and-decaf/riscv" }
bbl = { path = "../crate/bbl" }


[build-dependencies]
cc = "1.0"
